# ml-cybersecurity

./: .gitignore  README.md  pyproject.toml
malware_detection/: README.md  notebook.ipynb  predict.py
